# PicTools

./: .gitignore  LICENSE  importer.py  pic_import.py  pic_import.py.bak  pyproject.toml
pic_tools/: __init__.py  check_completeness.py  pic_import.py  pic_resize.py  sort.py
tests/: test_pic_import.py
