[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pic_tools"
author = "Gabriel Kabbe"
author-email = "gabriel.kabbe@mail.de"
home-page = "https://github.com/gab50000/PicTools"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["fire", "exifread"]

[tool.flit.scripts]
pic_import = "pic_tools.pic_import:cli"